Clean up TestWebClient
Contruct URL via URI, side-stepping deprecation notices.

Change-Id: Ibf5c1cb81966f0c9d3b8527326a0d3331e11a1e1
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>